buildscript {
  repositories {
    mavenCentral()
  }
  dependencies {
    classpath 'cz.habarta.typescript-generator:typescript-generator-gradle-plugin:3.2.1263'
  }
}

plugins {
  id 'org.springframework.boot' version '3.1.5'
  id 'io.spring.dependency-management' version '1.1.3'
  id 'java'
  // Spotless for the code style
  id "com.diffplug.spotless" version "6.23.3"
}

apply plugin: 'cz.habarta.typescript-generator'

group = 'com.odde'
version = '0.0.1-SNAPSHOT'
java {
  sourceCompatibility = 21
  targetCompatibility = 21
}

configurations {
  compileOnly {
    extendsFrom annotationProcessor
  }
}

repositories {
  mavenCentral()
}

dependencies {
  implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
  implementation 'org.springframework.boot:spring-boot-starter-web'
  implementation 'org.flywaydb:flyway-mysql'
  implementation 'com.fasterxml.jackson.module:jackson-module-jsonSchema:2.15.2'
  compileOnly 'org.flywaydb:flyway-core'
  implementation 'org.springframework.session:spring-session-core'
  implementation 'org.springframework.boot:spring-boot-starter-validation'
  implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
  implementation 'org.springframework.boot:spring-boot-starter-security'
  implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
  implementation 'com.theokanning.openai-gpt3-java:service:0.18.2'
  implementation 'com.squareup.retrofit2:adapter-rxjava2:2.9.0'
  implementation 'com.squareup.retrofit2:converter-jackson:2.9.0'
  implementation 'com.vladsch.flexmark:flexmark-all:0.64.8'
  compileOnly 'org.projectlombok:lombok'
  developmentOnly 'org.springframework.boot:spring-boot-devtools'
  runtimeOnly 'com.mysql:mysql-connector-j:8.1.0'
  annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
  annotationProcessor 'org.projectlombok:lombok'
  testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

test {
  useJUnitPlatform()
  testLogging {
    exceptionFormat = 'full'
  }
}

tasks.register("testDBMigrate") {
  group = "application"
  description = "Runs DB mirgration for test profile"
  doFirst {
    tasks.bootRun.configure {
      systemProperty("spring.profiles.active", "test")
      systemProperty("odd-e.doughnut.task", "testDBMigrate")
    }
  }
  finalizedBy("bootRun")
}

tasks.register("bootRunE2E") {
  group = "application"
  description = "Runs Doughnut SpringBoot application in e2e profile"
  doFirst {
    tasks.bootRun.configure {
      systemProperty("spring.profiles.active", "e2e")
    }
  }
  finalizedBy("bootRun")
}

spotless {
  java {
    importOrder() // standard import order
    removeUnusedImports()
    googleJavaFormat()
    targetExclude("build/**")
  }
}

tasks.register("lint") {
  dependsOn spotlessCheck
}

generateTypeScript {
  noFileComment = true
  jsonLibrary = 'jackson2'
  classPatterns = [
    'com.odde.doughnut.controllers.json.*',
  ]
  optionalAnnotations = ['org.springframework.lang.Nullable']
  customTypeMappings = [
    'java.sql.Timestamp:string'
  ]
  outputFile = '../frontend/src/@types/generated/rest.d.ts'
  outputKind = 'global'
  namespace = 'Generated'
}
